--- a/WebChatMvc/Views/Account/Login.cshtml
+++ b/WebChatMvc/Views/Account/Login.cshtml
@@ -5,9 +5,9 @@
       asp-route-returnUrl="@Model.ReturnUrl">
     <div asp-validation-summary="ModelOnly"></div>
     <div>
-        <label asp-for="EmailOrUserName"></label><br />
-        <input asp-for="EmailOrUserName" />
-        <span asp-validation-for="EmailOrUserName"></span>
+        <label asp-for="UserName"></label><br />
+        <input asp-for="UserName" />
+        <span asp-validation-for="UserName"></span>
     </div>
     <div>
         <label asp-for="Password"></label><br />
